--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en-CA">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Style test with picture">
+    <meta name="author" content="E.Jette">
+    <meta name="viewport" content="width=device-width,inital-scale=1.0" >
     <title>Unit2-05</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
