--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 style="color:#6a91ba"><b>Fall is the best season!</b></h1>
     <i style="color:#6a91ba">Look at this picture.</i>
     <br>
-    <img src="./images/lakehouse.jpg" alt:"a lake house and trees with orange leaves" width="200" height="200">
+    <img src="./images/lakehouse.jpg" alt:"A lake house" style="width:200px;height=200px;">
     <p style="color:#6a91ba">Wow <sup>trees</sup>are so cool!</p>
     <script src="script.js"></script>
   </body>
@@ -23,4 +23,4 @@
 1.quote
 2.3 different colors
 3.strikethrough test
-4. subscript text
+4. subscript text-->
