tried to fix images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 style="color:#6a91ba"><b>Fall is the best season!</b></h1>
     <i style="color:#6a91ba">Look at this picture.</i>
     <br>
-    <img src="./images/lakehouse.jpg" alt:"A lake house" style="width:200px;height=200px;">
+    <img src="./images/lakehouse.jpg" alt="A lake house" style="width:200px;height=200px;"/>
     <p style="color:#6a91ba">Wow <sup>trees</sup>are so cool!</p>
     <script src="script.js"></script>
   </body>
